# Quake-2

./: .clang-format  CMakeLists.txt
client/: anorms.h  cdaudio.h  cl_cin.c  cl_cin.cpp  cl_ents.c  cl_ents.cpp  cl_fx.cpp  cl_input.c  cl_input.cpp  cl_inv.cpp  cl_main.c  cl_main.cpp  cl_newfx.cpp  cl_parse.cpp  cl_pred.c  cl_pred.cpp  cl_scrn.cpp  cl_tent.cpp  cl_view.c  cl_view.cpp  client.h  console.cpp  console.h  input.h  keys.c  keys.cpp  keys.h  menu.c  menu.cpp  qmenu.cpp  qmenu.h  ref.h  screen.h  snd_dma.cpp  snd_loc.h  snd_mem.cpp  snd_mix.cpp  sound.h  vid.h
game/: g_ai.c  g_ai.cpp  g_chase.c  g_chase.cpp  g_cmds.c  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_items.cpp  g_local.h  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_monster.c  g_monster.cpp  g_phys.cpp  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.c  g_svcmds.cpp  g_target.c  g_target.cpp  g_trigger.c  g_turret.c  g_turret.cpp  g_utils.c  g_utils.cpp  g_weapon.cpp  game.h  m_actor.cpp  m_actor.h  m_berserk.c  m_berserk.h  m_boss2.c  m_boss2.cpp  m_boss2.h  m_boss3.c  (+49 more)
qcommon/: cmd.cpp  cmodel.c  cmodel.cpp  common.c  common.cpp  crc.cpp  cvar.c  cvar.cpp  files.c  files.cpp  md4.cpp  net_chan.cpp  pmove.c  pmove.cpp  qcommon.h  qfiles.h
ref_gl/: anormtab.h  gl_draw.cpp  gl_image.cpp  gl_light.cpp  gl_local.h  gl_mesh.c  gl_mesh.cpp  gl_model.c  gl_model.cpp  gl_model.h  gl_rmain.c  gl_rmain.cpp  gl_rmisc.cpp  gl_rsurf.cpp  gl_warp.cpp  qgl.h  warpsin.h
server/: server.h  sv_ccmds.cpp  sv_ents.c  sv_ents.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_null.cpp  sv_send.c  sv_send.cpp  sv_user.cpp  sv_world.c  sv_world.cpp
win32/: cd_win.cpp  conproc.c  conproc.h  glw_imp.cpp  glw_win.h  in_win.c  in_win.cpp  net_wins.cpp  q_shwin.cpp  qgl_win.cpp  snd_win.c  snd_win.cpp  sys_win.c  sys_win.cpp  vid_dll.c  vid_dll.cpp  vid_menu.c  vid_menu.cpp  winquake.h
